[package]
name = "chess_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chess = "3.2.0"
num-derive = "0.2"
num-traits = "0.2"
log = "0.4.17"
env_logger = "0.10.0"

[lib]
name = "chess_lib"
path = "../chess_lib/src/lib.rs"
